--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -888,7 +888,9 @@ h2{
 #VIDZINDEX
 {
 	
-	border:red solid;
+	border:red solid 8px;
+	padding-left: 0px;
+	max-width: 1015px;
 }
 
 #INDEXH1
@@ -905,6 +907,12 @@ h2{
 {
 	max-width:25%
 }
+
+#IMG25
+{
+	width:100%;
+}
+
 @media only screen and (max-width:600px) {
     #IMG1{
         width:100%;
