--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -723,12 +723,13 @@ nav {
 	.nav-fostrap li:hover a {
 		background: rgba(224, 224, 224,0.4);
 		color: #2980B9 !important;
+		padding: 0 0px !important;
 	}
 
 	.nav-fostrap li ul.dropdown li:hover a {
 		background: rgba(0,0,0,.1) !important;
 		color: #2980B9 !important;
-		padding: 0px !important:
+		
 	}
 
 	.nav-fostrap li ul.dropdown li a { padding: 0px; }
