--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -358,7 +358,6 @@ nav {
 .nav-fostrap li:hover a {
 	background: rgba(224, 224, 224,0.4);
 	color: #89171c !important;
-	padding: 0 0px;
 }
 
 .nav-fostrap li:first-child:hover a { border-radius: 3px 0 0 3px; }
@@ -723,7 +722,6 @@ nav {
 	.nav-fostrap li:hover a {
 		background: rgba(224, 224, 224,0.4);
 		color: #2980B9 !important;
-		padding: 0 0px !important;
 	}
 
 	.nav-fostrap li ul.dropdown li:hover a {
@@ -869,6 +867,7 @@ h2{
     width: 10%;
     position: absolute;
 	margin-left: -5%;
+	margin-top: 1%;
 }
 
 #IMG17
