--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -836,14 +836,14 @@ h2{
 	color: #d62976;
 }
 
-#lk{
+#lki{
 	color: white;
     position: relative;
     right: 50px;
 	top: 10px;
 }
 
-#lk:hover{
+#lki:hover{
 	color: #2867B2;
 }
 
