--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -259,10 +259,6 @@ table > tbody > tr > td, table > tfoot > tr > td {
 }
 
 @media (max-width:480px){
-	/*---------Container Login ---------*/
-	.login-01 {
-		width: 85%;
-	}
 	
 	/*---------Inputs---------*/
 	input[type="text"], form textarea {
@@ -278,210 +274,9 @@ table > tbody > tr > td, table > tfoot > tr > td {
 		font-size:0.9em;
 	}
 	
-	/*--------- Menu ---------*/ 
-	.header-pages{
-		margin-top: 60px !important;	
-	}
 	
-	.nav-fostrap {
-		background: #F0F0F0;
-		width: 250px;
-		height: 100%;
-		display: block;
-		position: fixed;
-		left: -250px;
-		top: 0px;
-		-webkit-transition: left 0.25s ease;
-		-moz-transition: left 0.25s ease;
-		-ms-transition: left 0.25s ease;
-		-o-transition: left 0.25s ease;
-		transition: left 0.25s ease;
-		margin: 0;
-		border: 0;
-		border-radius: 0;
-		overflow-y: auto;
-		overflow-x: hidden;
-	}
-	
-	.title-mobile {
-		position: absolute;
-		top: 15px;
-		font-size: 20px;
-		left: 100px;
-		right: 100px;
-		text-align: center;
-		color: #FFF;
-		display: inline-block !important;
-	}
-	
-	.logo-box {
-		display: none;
-	}
-	
-	.nav-div-fostrap{
-		margin: 15px;
-	}
-	
-	.nav-fostrap.visible {
-		left: 0px;
-		-webkit-transition: left 0.25s ease;
-		-moz-transition: left 0.25s ease;
-		-ms-transition: left 0.25s ease;
-		-o-transition: left 0.25s ease;
-		transition: left 0.25s ease;
-		z-index: 2;
-	}
-	
-	.nav-bg-fostrap {
-		z-index: 2;
-		display: inline-block;
-		vertical-align: middle;
-		width: 100%;
-		height: 50px;
-		margin: 0;
-		position: absolute;
-		top: 0px;
-		left: 0px;
-		background: #89171c !important;
-		padding: 12px 0 0 10px;
-		-webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
-		-moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
-		-ms-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
-		-o-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
-		box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
-	}
-	
-	
-	.navbar-fostrap span, .navbar-fostrap span:before, .navbar-fostrap span:after {
-		cursor: pointer;
-		border-radius: 1px;
-		height: 5px;
-		width: 35px;
-		background: #ffffff;
-		position: absolute;
-		display: block;
-		content: "";
-		transition: all 300ms ease-in-out;
-	}
-	
-	.navbar-fostrap span:after {
-		bottom: -10px;
-	}
-	.navbar-fostrap span:before {
-		top: -10px;
-	}
-	
-	.navbar-fostrap.active span {
-		background-color: transparent;
-	}
-	.navbar-fostrap.active span:after {
-		transform: rotate(-45deg);
-	}
-	
-	.navbar-fostrap.active span:before {
-		transform: rotate(45deg);
-	}
-	
-	.navbar-fostrap.active span:before, .navbar-fostrap.active span:after {
-		top: 0;
-	}
-	
-	.nav-fostrap ul { 
-		padding-top: 50px; 
-		clear: both;
-		float: none;
-	}
-	
-	
-	.nav-fostrap li { 
-		display: block; 
-		margin-left: 0px;
-		text-align: center;
-	}
-	
-	.nav-fostrap li a {
-		display: block;
-		color: #505050;
-		font-weight: 600;
-	}
-	
-	.nav-fostrap li:first-child:hover a { border-radius: 0; }
-	
-	.nav-fostrap li ul.dropdown { position: relative; }
-	
-	.nav-fostrap li ul.dropdown li a {
-		background: #2980B9 !important;
-		border-bottom: none;
-		color: #fff !important;
-	}
-	
-	.nav-fostrap li:hover a {
-		background: rgba(224, 224, 224,0.4);
-		color: #2980B9 !important;
-	}
-	
-	.nav-fostrap li ul.dropdown li:hover a {
-		background: rgba(0,0,0,.1) !important;
-		color: #2980B9 !important;
-	}
-	
-	.nav-fostrap li ul.dropdown li a { padding: 0px; }
-	
-	.nav-fostrap li:hover .arrow-down { border-top: 5px solid #fff; }
-	
-	.arrow-down {
-		border-top: 5px solid #505050;
-		position: absolute;
-		top: 20px;
-		right: 10px;
-	}
-	
-	.cover-bg {
-		background: rgba(0,0,0,0.5);
-		position: fixed;
-		top: 0;
-		bottom: 0;
-		left: 0;
-		right: 0;
-	}
 	/*--------- Fim Menu ---------*/ 
 	
-	/*---------Contactos---------*/
-	.info{
-		display: block;
-		width: 100%;
-		margin-top: 40px;
-	}
-	.info p {
-		text-align: center;
-	}
-	
-	.contacto{
-		display: block;
-		width: 100%;
-		left: 8%!important;;
-		margin-top: 40px;
-		position: relative;
-	}
-	
-	.jumbo{
-		margin-left:18px;
-	}
-	/*---------Fim Contactos---------*/
-	
-	/*---------Oradores Convidados---------*/
-	.imagem{
-		display:inline;
-	}
-	.orador{
-		width: 100%;
-		display: inline-block;
-	}
-	.orador img {
-		position: relative;
-		margin-left: 35%;
-	}
-	/*---------Fim Oradores Convidados---------*/ 
     #IMG22{
         width:100%;
         margin-top: 1%;
@@ -494,16 +289,8 @@ table > tbody > tr > td, table > tfoot > tr > td {
 @media only screen and (max-width: 700px){
     #IMG22{
         width:40%;
-	margin-top: 4%}
-	
-	/*--------- Jantar imagem e iframe ---------*/
-	.h_iframe img {
-		display: block;
+		margin-top: 4%
 	}
-	
-	.h_iframe iframe {
-		display: none;
-	}	
 }
 h2{
     color:black;
@@ -529,17 +316,6 @@ h2{
 
 #ig:hover{
 	color: #d62976;
-}
-
-#lki{
-	color: white;
-    position: relative;
-    right: 50px;
-	top: 10px;
-}
-
-#lki:hover{
-	color: #2867B2;
 }
 
 #email{
@@ -730,4 +506,76 @@ a.btn.btn-outline-danger : hover
 .carousel-control-next, .carousel-control-prev 
 {
 	width:5% !important;
+}
+
+#SlideshowOradoresMobile
+{
+	display:none;
+}
+
+
+#lki{
+	color: white;
+    position: relative;
+    right: 50px;
+	top: 10px;
+}
+
+#lki:hover{
+	color: #2867B2;
+}
+
+@media only screen and (max-width:767px) {
+	#SlideshowOradoresMobile
+	{
+		display:block;
+	}
+	#SlideshowOradores
+	{
+		display:none;
+	}
+	.carousel-control-next, .carousel-control-prev 
+	{
+		width:3% !important;
+	}
+	.texto-slider
+	{
+		padding-left: 15px !important
+	}
+	.imagem-slider
+	{
+		padding-right: 15px !important;
+	}
+	#lki{
+		color: white;
+		position: relative;
+		right: 5%;
+		top: 10px;
+	}
+	
+	#lki:hover{
+		color: #2867B2;
+	}
+	
+	#fb{
+		color: white;
+		position: relative;
+		right: 5%;
+		top: 10px;
+	}
+	
+	#fb:hover{
+		color: #3b5998;
+	}
+	
+	#ig{
+		color: white;
+		position:relative;
+		right: 5%;
+		top:10px;
+	}
+	
+	#ig:hover{
+		color: #d62976;
+	}
 }
