--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -144,18 +144,14 @@ table > tbody > tr > td, table > tfoot > tr > td {
 }
 
 .entry-content  a:hover {
-	color: white;
 	text-decoration: underline;
+	text-shadow:2px black;
 	font-weight: bolder!important;
 }
 
-.entry-content a:visited{
-	color: white;
-}
-
 .entry-content a {
-	color: white !important;
 	text-decoration: none;
+	color: black;
 	outline: none;
 }
 
@@ -479,11 +475,6 @@ a.btn.btn-outline-danger : hover
 	margin-top: 10%}
 }
 
-
-.entry-content a:hover {
-    color: white !important;
-}
-
 .carousel-control-next
 {
 	background-color: rgb(187, 5, 7)!important;
@@ -532,6 +523,10 @@ a.btn.btn-outline-danger : hover
 .patrocinadoresMax
 {
 	max-width:75%!important;
+}
+
+#nav-link{
+	color:black!important;
 }
 
 @media only screen and (max-width:767px) {
